--- a/styles.css
+++ b/styles.css
@@ -44,20 +44,23 @@ body {
     margin-top: 5px;
     margin-left: 5px;
 }
-#about {
+/* #about {
     margin-left: 7vw;
-}
+} */
 .top_left {
     margin-top: 5px;
-    padding: 10px;
+    /* padding: 5px; */
     color: var(--font-colour);
     position: relative;
     height: 50px;
-    width: 14vw;
+    width: 13.4vw;
     z-index: 10;
     text-align: center;
     padding: 10px;
 }
+/* #home {
+    margin-left: -7px;
+} */
 .left_txt {
     position: relative;
     top: 25%;
