--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     left: 0;
     position: fixed;
     width: 100%;
-    height: 115px;
+    height: calc(8vw + 5px);
     overflow: hidden;
     background: var(--top-bar-colour);
     cursor: pointer;
@@ -34,15 +34,16 @@ body {
     /* left: calc(0.5vw - 37.5px); */
     /* left: 75px; */
     top: 0;
-    width: 100px;
-    height: 100px;
+    width: 7vw;
+    height: 7vw;
     border-radius: 50px;
     background: pink;
     text-align: center;
     /* margin-left: 100px; */
     /* text-emphasis-position: 10px; */
     margin-top: 5px;
-    margin-left: 5px;
+    margin-bottom: 5px;
+    /* margin-left: 5px; */
 }
 /* #about {
     margin-left: 7vw;
@@ -56,11 +57,14 @@ body {
     width: 13.4vw;
     z-index: 10;
     text-align: center;
-    padding: 10px;
+    padding: 0.5vw;
 }
-/* #home {
-    margin-left: -7px;
-} */
+#home {
+    margin-left: 1vw;
+}
+#something {
+    margin-right:1vw;
+}
 .left_txt {
     position: relative;
     top: 25%;
@@ -74,20 +78,20 @@ body {
 }
 #first-body {
     width: 100%;
-    height: calc(100vh - 115px);
+    height: calc(100vh - 8vw - 5px);
     position: relative;
     background: var(--background-colour);
     left: 0;
-    top: 115px;
+    top: calc(8vw + 5px);
     z-index: -1;
 }
 .frontpage {
     width: 100%;
-    height: calc(100vh - 115px);
+    height: calc(100vh - 8vw - 5px);
     position: relative;
     background: var(--background-colour);
     left: 0;
-    top: 115px;
+    top: calc(8vw + 5px);
     z-index: -1;
 }
 #sponsors {
@@ -95,7 +99,7 @@ body {
     width: 100%;
     height: 200px;
     background: var(--sponsor-colour);
-    top: 115px;
+    top: calc(8vw + 5px);;
     left: 0;
 }
 .spon {
@@ -139,10 +143,10 @@ body {
 }
 .forepage {
     width: 100%;
-    height: calc(100vh - 115px);
+    height: calc(100vh - 8vw - 5px);
     position: relative;
     left: 0;
-    top: 115px;
+    top: calc(8vw + 5px);
     z-index: -1;
     background: var(--foreground-colour);
 }
