--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     width: 7vw;
     height: 7vw;
     border-radius: 50px;
-    background: pink;
+    background: black;
     text-align: center;
     margin-top: 5px;
     margin-bottom: 5px;
